# benepar-nx

./: .gitignore  G.dot  README.md  demo.ipynb  pyproject.toml  setup.py
.github/workflows/: ci-cd.yml
src/benepar_nx/: constituency_parse.py
