[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "benepar_nx"
version = "0.0.1"
authors = [
  { name="y@wildfluss.com", email="y@wildfluss.com" },
]
description = "NetworkX graph from benepar constituency parse"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/wildfluss/benepar_nx"
"Bug Tracker" = "https://github.com/wildfluss/benepar_nx/issues"